# hopfencloud

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  Vagrantfile  docker-compose.yml  example.config.toml  go.mod  go.sum  hopfencloud.service
cli/: create_admin_user.go  settings.go
cmd/hopfencli/: main.go
cmd/hopfencloud/: main.go
conf/: config.go
frontend/: index.html  package.json
frontend/hopfencloud_frontend/: package.json
frontend/public/: index.html
frontend/src/: index.css  index.tsx  main.tsx
handler/: files.go
handler/cli/: cli.go  create_admin_user.go  settings_show.go
handler/web/: download.go  files.go  login.go  logout.go  register.go  settings.go  upload.go  verify_email.go  wrapper.go
models/conf/: config.go
models/db/: file.go  files.go  group.go  groups.go  settings.go  shares.go  user.go
modules/crypt/: token.go
modules/logger/: stdlogger.go
modules/tasks/: mail.go
modules/utils/: account.go  filepaths.go  formatter.go
provision/: .vars.yml  config.toml.jinja2  hopfencloud.nginx.jinja2  hopfencloud.service  playbook.yml
server/: database.go  files.go  router.go  rpc.go  server.go  settings.go
src/: config.rs  main.rs
src/handler/api/: auth.rs  mod.rs
src/models/: config.rs  files.rs  mod.rs  user.rs
src/server/: error.rs  mod.rs
src/server/middleware/: authentication_required.rs  mod.rs
static/css/: hopfencloud.css
static/js/: files.js
tasks/: mail.go
templates/: README.md  files.gohtml  login.gohtml
templates/auth/: login.gohtml
templates/base/: footer.gohtml  head.gohtml
templates/html/: files.gohtml
templates/html/admin/: settings_general.gohtml  settings_mail.gohtml
templates/html/auth/: register.gohtml  verify_email.gohtml
templates/html/menu/: topbar.gohtml
templates/mail/: registration.gotxt
