[workspace]
members = [
    ".",
]

[package]
name = "hopfencloud"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "AGPL"
repository = "https://github.com/myOmikron/hopfencloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Webframework
actix-web = { version = "~4" }
# Middleware and helper functions for actix
actix-toolbox = { version = "~0.8", features = ["logging", "session", "ws"] }
# Webauthn library
webauthn-rs = { version = "~0.4", features = ["danger-allow-state-serialisation"] }

# Argon hash provider
argon2 = { version = "~0.4" }

# Logging facade
log = { version = "~0.4" }

# CLI parser
clap = { version = "~4", features = ["derive"] }
# Secure password input
rpassword = { version = "~7" }

# ORM
rorm = { version = "~0.4", features = ["tokio-rustls"] }

# Serialization library
serde = { version = "~1", features = ["derive"] }
serde_repr = { version = "~0.1" }
# Toml parser for serde
toml = { version = "~0.7" }
# Base64 encoder and decoder
base64 = { version = "~0.21" }
# Time library
chrono = { version = "~0.4" }
# Bytes abstractions
bytes = { version = "~1" }

# Async runtime
tokio = { version = "~1", features = ["macros", "rt-multi-thread", "sync"] }
futures = { version = "~0.3" }

[features]
rorm-main = []
